Fix for font size for touch splash screen on mobile

--- a/production/css/style.css
+++ b/production/css/style.css
@@ -522,3 +522,9 @@ and (max-device-width : 1280px) {
 		cursor: pointer;
 	}
 }
+@media only screen 
+and (max-device-width : 592px) {
+	.touch .touch-splash {
+		font-size: 10px
+	}
+}
